<resources>
    <string name="checking_license">Checking license…</string>
    <string name="button_quit">Exit</string>
    <string name="button_buy">Buy App</string>
    <string name="unlicensed_dialog_retry_body">Unable to confirm that the application is licensed. Please purchase it from Android Market. If you have, please check that there is a network connection available, and retry this licence check.</string>
    <string name="unlicensed_dialog_body">Unable to validate license. Check to see if a network connection is available.</string>
    <string name="unlicensed_dialog_title">Application not licensed</string>
    <string name="application_error">Application error: %1$d</string>
    <string name="ad_id_album_banner" translatable="false">ca-app-pub-1408465472557768/1316125026</string>
    <string name="ad_id_album_create_banner" translatable="false">ca-app-pub-1408465472557768/9877975475</string>
    <string name="ad_id_slideshow_banner" translatable="false">ca-app-pub-1408465472557768/6117859712</string>
    <string name="ad_id_album_interstitial" translatable="false">ca-app-pub-1408465472557768/4632241138</string>
    <string name="ad_id_uploads_interstitial" translatable="false">ca-app-pub-1408465472557768/7831653530</string>
    <string name="ad_id_selectlist_banner" translatable="false">ca-app-pub-1408465472557768/6141555221</string>
    <string name="ad_id_user_edit_banner" translatable="false">ca-app-pub-1408465472557768/5646731207</string>
    <string name="ad_id_group_edit_banner" translatable="false">ca-app-pub-1408465472557768/2002875958</string>
    <string name="ad_id_uploads_banner" translatable="false">ca-app-pub-1408465472557768/6053925314</string>
    <string name="ad_id_app_preferences_banner" translatable="false">ca-app-pub-1408465472557768/7547325605</string>
    <string name="ad_id_app_about_banner" translatable="false">ca-app-pub-1408465472557768/2374534759</string>
    <string name="ad_id_app_top_tips_banner" translatable="false">ca-app-pub-1408465472557768/3659572555</string>
    <string name="ad_id_app_licences_banner" translatable="false">ca-app-pub-1408465472557768/5519449132</string>
    <string name="ad_id_app_eula_banner" translatable="false">ca-app-pub-1408465472557768/4753162372</string>
    <string name="ad_id_reward_ad" translatable="false">ca-app-pub-1408465472557768/9874441359</string>
    <string name="app_name" translatable="false">PiwigoClient</string>
    <string name="app_name_and_version_pattern" translatable="false">PiwigoClient v%1$s (free)</string>
    <string name="app_paid_name_and_version_pattern" translatable="false">PiwigoClient v%1$s</string>
    <string name="alert_title_permissions_needed">Extra Permissions Required</string>
    <string name="admin_email" translatable="false"><a href="mailto:gd_apps-piwigoclient@yahoo.co.uk">gd_apps-piwigoclient@yahoo.co.uk</a></string>
    <string name="settings_menu_title">App Settings</string>
    <string name="gallery_menu_title">Gallery</string>
    <string name="upload_menu_title">Upload</string>
    <string name="gallery_to_alter_title">Upload to</string>
    <string name="upload_file_privacy_level_title">File Privacy Level</string>
    <string name="createGallery_parentGalleryTitle">Parent Album</string>
    <string name="createGallery_galleryNameTitle">Album Name</string>
    <string name="createGallery_galleryDescriptionTitle">Description</string>
    <string name="createGallery_galleryCommentsAllowed">Allow users to add comments</string>
    <string name="createGallery_permissions_allowedGroupsTitle">Allowed Groups</string>
    <string name="createGallery_permissions_allowedUsersTitle">Allowed Users</string>
    <string name="createGallery_createGalleryButtonTitle">Create Album</string>
    <string name="none_selected">None</string>
    <string name="about_menu_title">About</string>
    <string name="eula" formatted="false">"End­User License Agreement (\"Agreement\")


** Sourcecode:
        https://github.com/extorn/piwigo-client

** Last updated: 18 September 2020

Please read this End­User License Agreement (\"Agreement\") carefully before clicking the \"I Agree\"
button, downloading or using Piwigo Client (\"Application\").

By clicking the \"I Agree\" button, downloading or using the Application, you are agreeing to be bound
by the terms and conditions of this Agreement.
If you do not agree to the terms of this Agreement, do not click on the \"I Agree\" button and do not
download or use the Application.

If you are considering using this app to access and or amend a server used for commercial purposes it is essential that you read and understand the limitations on liability.
You must test this on a non production server to your satisfaction before accepting any risk and liability yourself based on your decisions. This app has been designed primarily
for non-commercial purposes.

** Definitions

Licensee: The licensee is the person or company who intend to use the licensed software or already uses it legally or illegally. The term “licensee” does not imply that the software is legally licensed by default.


** License

Gareth Deli grants you a revocable, non­exclusive, non­transferable, limited license
to download, install and use the Application solely for your personal, or commercial purposes
strictly in accordance with the terms of this Agreement.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE


** Restrictions

You agree not to, and you will not permit others to:
a) license, sell, rent, lease, assign, distribute, transmit, host, outsource, disclose or otherwise
commercially exploit the Application or make the Application available to any third party.
b) create derivative works based on this application.


** User Data Collection

Firebase integration has been added to this application to facilitate tracking use of the application with the main purposes being more efficient bug resolution and ascertaining the way the app is being used. The minimum data required to achieve this purpose will be collected.


** Limited Warranty and Disclaimer

The software is provided \“as is\” and the licensee uses it at his/her own risk. Gareth Deli makes no warranties to its use, to its performance or to its fitness for a particular purpose. It is always possible that software contains errors (bugs) and fails to work. Therefore Gareth Deli doesn't warrant that the software is completely error free, or that it works without interruption with all computers and configurations.

It is solely in the licensee’s responsibility to check if the software fits his particular purpose or meets his functional and performance requirements. The licensee is also obliged to test how the software works on his devices and his configurations; test all use cases and check if data processed without errors and as desired before they use the software in production environments. This is of vital importance if using the software for commercial purposes.


** Limitations on Liability

The licensee is responsible for the consequences of use of the software and the thereby resulting direct and indirect damages as far as it is legally possible. The liability is limited to the purchase price as far as it is legally possible; otherwise it is limited to the legally possible minimum.


** Maintenance and Support

Gareth Deli provides general support for the current version of the software through email only. Older versions are not supported.


** Modifications to Application

Gareth Deli reserves the right to modify, suspend or discontinue, temporarily or
permanently, the Application or any service to which it connects, with or without notice and without
liability to you.


** Term and Termination

This Agreement shall remain in effect until terminated by you or Gareth Deli.

Gareth Deli may, in its sole discretion, at any time and for any or no reason,
suspend or terminate this Agreement with or without prior notice.
This Agreement will terminate immediately, without prior notice from Gareth Deli, in
the event that you fail to comply with any provision of this Agreement. You may also terminate this
Agreement by deleting the Application and all copies thereof from your mobile device or from your
desktop.
Upon termination of this Agreement, you shall cease all use of the Application and delete all copies
of the Application from your mobile device or from your desktop.


** Severability

If any provision of this Agreement is held to be unenforceable or invalid, such provision will be
changed and interpreted to accomplish the objectives of such provision to the greatest extent
possible under applicable law and the remaining provisions will continue in full force and effect.


** Amendments to this Agreement

Gareth Deli reserves the right, at its sole discretion, to modify or replace this
Agreement at any time. You will be notified of the change on opening the application, and have the
option to either accept the changes, or stop using the application.


** Contact Information

If you have any questions about this Agreement, please contact us."
</string>
    <string name="slideshow_image_details_name_title">Resource Name</string>
    <string name="slideshow_image_details_description_title">Resource Description</string>
    <string name="unlock_menu_title">Unlock</string>
    <string name="lock_menu_title">Lock</string>
    <string name="gallery_details_status_title">Privacy Status</string>
    <string name="gallery_details_status">Restrict access to this folder</string>
    <string name="click_to_view">Click to view</string>
    <string name="alert_image_show_image_message">Please choose the file size you wish to view</string>
    <string name="button_agree">I Agree</string>
    <string name="eula_menu_title">EULA</string>
    <string name="groups_menu_title">Groups</string>
    <string name="users_menu_title">Users</string>
    <string name="upload_username_title">Upload as</string>
    <string name="alert_image_show_image_select_max_zoom">Allow up to 100x zoom</string>
    <string name="alert_image_show_image_select_rotation">Rotate Image</string>
    <string name="top_tips_menu_title">Top Tips</string>
    <string name="slideshow_image_details_linked_albums_title">Linked Albums</string>
    <string name="tags_menu_title">Tags</string>
    <string name="slideshow_image_details_tags_title">Tags</string>
    <string name="slideshow_image_details_rating_score_title">Rating score</string>
    <string name="rating_score_pattern">%1$.2f (%2$d rates)</string>
    <string name="compress_videos">Compress Videos</string>
    <string name="compress_images">Compress Images</string>
    <string name="delete_uploaded_files_title">Delete uploaded files</string>
    <string name="createGallery_galleryCommentsAllowed_title">User Comments</string>
    <string name="privacy_policy_label">Our privacy policy</string>
    <string name="title_advert_consent">Your Privacy</string>
    <string name="personalised_adverts_label">Would you like adverts to be personalised?</string>
    <string name="personalised_adverts_field">Show personalised adverts</string>
    <string name="no_adverts_label">Prefer an advert free version of this app?</string>
    <string name="view_the_paid_version">Take me to the advert free version</string>
    <string name="advert_providers">Advert Providers in use</string>
    <string name="upload_defaults_label">Upload File Defaults</string>
    <string name="upload_server_detail_label">Server Detail</string>
</resources>