<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery_menu_title" />

        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/users_menu_title" />

        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/groups_menu_title" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings_menu_title" />

        <item
            android:id="@+id/nav_top_tips"
            android:icon="@drawable/ic_help_black_24px"
            android:title="@string/top_tips_menu_title" />

    </group>
</menu>
