<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:theme="@style/ThemeOverlay.EditPages">

    <androidx.core.widget.NestedScrollView
    android:layout_above="@+id/createGallery_adView"
    android:layout_alignWithParentIfMissing="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/createGallery_parentGalleryTitle"
            android:text="@string/createGallery_parentGalleryTitle"
            style="?editableFieldLabel"/>

        <EditText
            android:id="@+id/createGallery_parentGallery"
            tools:text="some gallery name"
            style="?editableFieldText"/>

        <TextView
            android:id="@+id/createGallery_galleryNameTitle"
            android:labelFor="@id/createGallery_galleryName"
            android:text="@string/createGallery_galleryNameTitle"
            style="?editableFieldLabel"/>

        <EditText
            android:id="@+id/createGallery_galleryName"
            android:inputType="text"
            android:maxLines="1"
            android:importantForAutofill="no"
            tools:text="Some album name"
            style="?editableFieldText"/>

        <TextView
            android:id="@+id/createGallery_galleryDescriptionTitle"
            android:labelFor="@id/createGallery_galleryDescription"
            android:text="@string/createGallery_galleryDescriptionTitle"
            style="?editableFieldLabel"/>

        <EditText
            android:id="@+id/createGallery_galleryDescription"
            android:inputType="textMultiLine"
            android:importantForAutofill="no"
            tools:text="Some album description"
            style="?editableFieldText"/>

        <TextView
            android:id="@+id/gallery_details_comments_allowed_label"
            android:labelFor="@id/createGallery_galleryCommentsAllowed"
            android:text="@string/createGallery_galleryCommentsAllowed_title"
            style="?editableFieldLabel" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/createGallery_galleryCommentsAllowed"
            android:text="@string/createGallery_galleryCommentsAllowed"
            style="?editableFieldSwitch"/>

        <TextView
            android:id="@+id/gallery_details_status_label"
            android:labelFor="@id/gallery_details_status"
            android:text="@string/gallery_details_status_title"
            style="?editableFieldLabel" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/createGallery_galleryIsPrivate"
            android:checked="true"
            android:text="@string/gallery_details_status"
            style="?editableFieldSwitch"/>

        <LinearLayout
            android:id="@+id/createGallery_privatePermissions"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/createGallery_permissions_allowedGroupsTitle"
                android:labelFor="@id/createGallery_permissions_allowedGroups"
                android:text="@string/createGallery_permissions_allowedGroupsTitle"
                style="?editableFieldLabel"/>
            <TextView
                android:id="@+id/createGallery_permissions_allowedGroups"
                android:gravity="center_vertical"
                android:text="@string/none_selected"
                android:lines="2"
                android:ellipsize="end"
                style="?editableFieldTextClickable"/>
            <TextView
                android:id="@+id/createGallery_permissions_allowedUsersTitle"
                android:labelFor="@id/createGallery_permissions_allowedUsers"
                android:text="@string/createGallery_permissions_allowedUsersTitle"
                style="?editableFieldLabel"/>
            <TextView
                android:id="@+id/createGallery_permissions_allowedUsers"
                android:gravity="center_vertical"
                android:text="@string/none_selected"
                android:maxLines="2"
                android:ellipsize="end"
                style="?editableFieldTextClickable"/>
        </LinearLayout>

        <Button
            android:id="@+id/createGallery_createGalleryButton"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createGallery_createGalleryButtonTitle"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/createGallery_adView"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/ad_id_album_create_banner">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>