<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gallery_details_edit_fields"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="20dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    tools:showIn="@layout/fragment_slideshow_item"
    android:theme="@style/Theme.App.EditPages">

        <TextView
            android:id="@+id/slideshow_image_details_description_label"
            style="?editableFieldLabel"
            android:labelFor="@+id/slideshow_image_details_description"
            android:text="@string/slideshow_image_details_description_title" />

        <EditText
            android:id="@+id/slideshow_image_details_description"
            style="?editableFieldText"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textNoSuggestions"
            android:maxLines="10"
            tools:enabled="false"
            tools:text="Some description text" />

        <TextView
            android:id="@+id/slideshow_image_details_name_label"
            style="?editableFieldLabel"
            android:labelFor="@+id/slideshow_image_details_name"
            android:text="@string/slideshow_image_details_name_title" />

        <EditText
            android:id="@+id/slideshow_image_details_name"
            style="?editableFieldText"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textNoSuggestions"
            android:maxLines="3"
            tools:text="Some resource name" />

        <TextView
            android:id="@+id/slideshow_image_details_linked_albums_label"
            style="?editableFieldLabel"
            android:labelFor="@+id/slideshow_image_details_linked_albums"
            android:text="@string/slideshow_image_details_linked_albums_title" />

        <TextView
            android:id="@+id/slideshow_image_details_linked_albums"
            style="?editableFieldTextClickable"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/click_to_view" />

        <TextView
            android:id="@+id/slideshow_image_details_tags_label"
            style="?editableFieldLabel"
            android:labelFor="@+id/slideshow_image_details_tags"
            android:text="@string/slideshow_image_details_tags_title" />

        <TextView
            android:id="@+id/slideshow_image_details_tags"
            style="?editableFieldTextClickable"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/click_to_view" />

        <TextView
            android:id="@+id/slideshow_image_details_rating_score_label"
            style="?editableFieldLabel"
            android:labelFor="@+id/slideshow_image_details_rating_score"
            android:text="@string/slideshow_image_details_rating_score_title" />

        <TextView
            android:id="@+id/slideshow_image_details_rating_score"
            style="?editableFieldText"
            android:text="@string/rating_score_pattern"
            android:textAppearance="?textAppearanceBody1"
            tools:text="1.2 (5 rates)" />

        <TextView
            android:id="@+id/slideshow_image_details_privacy_level"
            style="?editableFieldLabel"
            android:labelFor="@+id/privacy_level"
            android:text="@string/upload_file_privacy_level_title" />

        <Spinner
            android:id="@+id/privacy_level"
            style="?editableFieldSpinner" />

    </LinearLayout>