<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/alert_image_show_image_select_rotation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/imageRotationField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/alert_image_show_image_select_max_zoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <NumberPicker
        android:id="@+id/maxZoomValueField"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <TextView
        android:text="@string/alert_image_show_image_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/fileSelectList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:choiceMode="singleChoice" />

</LinearLayout>