<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/eula_text"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/eula_action_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fillViewport="true">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/eula"
            tools:text="EULA contents goes in here"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/eula_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/eula_adView"
        android:layout_alignWithParentIfMissing="true">

    <TextView
        android:id="@+id/eula_admin_email"
        android:layout_alignWithParentIfMissing="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_email"
        android:textAppearance="@style/Custom.TextAppearance.AppCompat.Body1.Clickable"/>

    <Button
        android:id="@+id/eula_cancel_button"
        android:layout_below="@+id/eula_admin_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel"/>

    <Button
        android:id="@+id/eula_agree_button"
        android:layout_below="@+id/eula_admin_email"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_agree"/>

    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/eula_adView"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/ad_id_app_eula_banner">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>